--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -196,6 +196,11 @@ jobs:
         continue-on-error: true
         shell: Rscript {0}
 
+      - name: Install dependencies from GitHub
+        run: |
+          BiocManager::install("iSEE/iSEEde", dependencies = TRUE)
+        shell: Rscript {0}
+
       - name: Install dependencies pass 2
         run: |
           ## Pass #2 at installing dependencies
@@ -262,7 +267,7 @@ jobs:
         run: |
           BiocCheck::BiocCheck(
               dir('check', 'tar.gz$', full.names = TRUE),
-              `quit-with-status` = TRUE,
+              `quit-with-status` = FALSE,
               `no-check-R-ver` = TRUE,
               `no-check-bioc-help` = TRUE
           )
